--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -16,6 +16,9 @@ pipeline {
         NEXUS_LOGIN = 'nexuslogin'
         SONARSERVER = 'sonarserver'
         SONARSCANNER = 'sonarscanner'
+        registryCredential = 'ecr:eu-west-2:awscreds'
+        appRegistry = '380782575515.dkr.ecr.eu-west-2.amazonaws.com/adityaimages'
+        vprofileRegistry = 'https://380782575515.dkr.ecr.eu-west-2.amazonaws.com'
     }
 
     stages{
@@ -79,6 +82,25 @@ pipeline {
                 )
             }
         }
+        stage('BUILD APP IMAGE'){
+            steps{
+                script {
+                    dockerImage = docker.build(appRegistry+":$BUILD_NUMBER", ./Docker-files/app/multistage)
+                }
+            }
+        }
+        
+        stage('UPLOAD APP IMAGE'){
+            steps{
+                script {
+                    docker.withRegistry( vprofileRegistry, registryCredential) {
+                        dockerImage.push("$BUILD_NUMBER")
+                        dockerImage.push('latest')
+                    }
+                }
+            }
+        }
+
 
     }
 }
