--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -85,7 +85,7 @@ pipeline {
         stage('BUILD APP IMAGE'){
             steps{
                 script {
-                    dockerImage = docker.build(appRegistry + ":$BUILD_NUMBER", ./Docker-files/app/multistage)
+                    dockerImage = docker.build(appRegistry + ":$BUILD_NUMBER", "./Docker-files/app/multistage")
                 }
             }
         }
