--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -19,6 +19,8 @@ pipeline {
         registryCredential = 'ecr:eu-west-2:awscreds'
         appRegistry = '380782575515.dkr.ecr.eu-west-2.amazonaws.com/adityaimages'
         vprofileRegistry = 'https://380782575515.dkr.ecr.eu-west-2.amazonaws.com'
+        cluster = "vprostaging"
+        service = "vprofileappstagesvc"
     }
 
     stages{
@@ -97,6 +99,13 @@ pipeline {
                         dockerImage.push("$BUILD_NUMBER")
                         dockerImage.push('latest')
                     }
+                }
+            }
+        }
+        stage('DEPLOY APP IMAGE TO ECS STAGING'){
+            steps{
+                withAWS(credentials: 'awscreds', region: 'eu-west-2'){
+                    sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
                 }
             }
         }
