--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -5,104 +5,12 @@ pipeline {
         jdk "OracleJDK8"
     }
     environment {
-        SNAP_REPO = 'vprofile-snapshot'
-        RELEASE_REPO = 'vprofile-release'
-        NEXUS_GRP_REPO = 'vpro-maven-group'
-        CENTRAL_REPO = 'vpro-maven-central'
-        NEXUSIP = '172.31.18.164'
-        NEXUSPORT = '8081'
-        NEXUS_USER = 'admin'
-        NEXUS_PASS = 'admin'
-        NEXUS_LOGIN = 'nexuslogin'
-        SONARSERVER = 'sonarserver'
-        SONARSCANNER = 'sonarscanner'
-        registryCredential = 'ecr:eu-west-2:awscreds'
-        appRegistry = '380782575515.dkr.ecr.eu-west-2.amazonaws.com/adityaimages'
-        vprofileRegistry = 'https://380782575515.dkr.ecr.eu-west-2.amazonaws.com'
-        cluster = "vprostaging"
-        service = "vprofileappstagesvc"
+        cluster = "vproprod"
+        service = "vprofileprodsvc"
     }
 
     stages{
-        stage('BUILD'){
-            steps{
-                sh 'mvn -s settings.xml -DskipTests install'
-            }
-            post {
-                success{
-                    echo "Now Archiving"
-                    archiveArtifacts artifacts: '**/*.war'
-                }
-            }
-        }
-
-        stage('TEST'){
-            steps{
-                sh 'mvn -s settings.xml test'
-            }
-        }
-
-        stage('CHECKSTYLE ANALYSIS'){
-            steps {
-                sh 'mvn -s settings.xml checkstyle:checkstyle'
-            }
-        }
-
-        stage('SONAR ANALYSIS') {
-            environment {
-                scannerHome = tool "${SONARSCANNER}"
-            }
-            steps{
-                withSonarQubeEnv("${SONARSERVER}") {
-                    sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
-                   -Dsonar.projectName=vprofile \
-                   -Dsonar.projectVersion=1.0 \
-                   -Dsonar.sources=src/ \
-                   -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-                   -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                   -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                   -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml'''
-                }
-            }
-        }
-        stage('UPLOAD ARTIFACT'){
-            steps {
-                nexusArtifactUploader(
-                    nexusVersion: 'nexus3',
-                    protocol: 'http',
-                    nexusUrl: "${NEXUSIP}:${NEXUSPORT}",
-                    groupId: 'ARTIFACTS',
-                    version: "V${env.BUILD_ID}",
-                    repository: "${RELEASE_REPO}",
-                    credentialsId: "${NEXUS_LOGIN}",
-                    artifacts: [
-                        [artifactId: 'vproapp',
-                        classifier: '',
-                        file: 'target/vprofile-v2.war',
-                        type: 'war']
-                    ]
-                )
-            }
-        }
-        stage('BUILD APP IMAGE'){
-            steps{
-                script {
-                    dockerImage = docker.build(appRegistry + ":$BUILD_NUMBER", "./Docker-files/app/multistage")
-                }
-            }
-        }
-        
-        stage('UPLOAD APP IMAGE'){
-            steps{
-                script {
-                    docker.withRegistry( vprofileRegistry, registryCredential) {
-                        dockerImage.push("$BUILD_NUMBER")
-                        dockerImage.push('latest')
-                    }
-                }
-            }
-        }
-        stage('DEPLOY APP IMAGE TO ECS STAGING'){
+        stage('DEPLOY APP IMAGE TO ECS PROD'){
             steps{
                 withAWS(credentials: 'awscreds', region: 'eu-west-2'){
                     sh 'aws ecs update-service --cluster ${cluster} --service ${service} --force-new-deployment'
